# xc3_model_py

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
src/: animation.rs  collision.rs  lib.rs  material.rs  monolib.rs  shader_database.rs  skinning.rs  vertex.rs
xc3_model_py/: Cargo.toml  __init__.py  __init__.pyi  animation.pyi  collision.pyi  material.pyi  shader_database.pyi  skinning.pyi  vertex.pyi
xc3_model_py/src/: animation.rs  collision.rs  lib.rs  map_py.rs  material.rs  monolib.rs  shader_database.rs  skinning.rs  vertex.rs
xc3_model_py/xc3_model_py/: __init__.py  __init__.pyi  animation.pyi  material.pyi  monolib.pyi  shader_database.pyi  skinning.pyi  vertex.pyi
xc3_model_py_derive/: Cargo.toml
xc3_model_py_derive/src/: lib.rs
