[package]
name = "xc3_model_py"
version = "0.5.1"
authors = ["ScanMountGoat"]
edition = "2021"

[dependencies]
xc3_model = { git = "https://github.com/ScanMountGoat/xc3_lib", rev = "265922a" }
xc3_lib = { git = "https://github.com/ScanMountGoat/xc3_lib", rev = "265922a" }
image_dds = "0.5.0"
pyo3 = { version = "0.20.2", features = ["extension-module", "indexmap"] }
numpy = "0.20.0"
indexmap = "2.0.0"
glam = "0.27.0"
rayon = "1.7.0"
pyo3-log = "0.9.0"

[build-dependencies]
pyo3-build-config = "0.20.2"

[lib]
name = "xc3_model_py"
crate-type = ["cdylib"]
