[package]
name = "xc3_model_py"
version = "0.16.0"
authors = ["ScanMountGoat"]
edition = "2024"
readme = "README.md"

[dependencies]
xc3_model = { git = "https://github.com/ScanMountGoat/xc3_lib", rev = "2baaa7a3" }
xc3_lib = { git = "https://github.com/ScanMountGoat/xc3_lib", rev = "2baaa7a3" }
map_py = { git = "https://github.com/ScanMountGoat/map_py", rev = "2dea8c4" }
image_dds = "0.7.1"
pyo3 = { version = "0.28.3", features = ["extension-module", "indexmap", "py-clone"] }
numpy = "0.28.0"
indexmap = "2.0.0"
glam = "0.30.3"
rayon = "1.7.0"
pyo3-log = "0.13.0"
anyhow = "1.0"
smol_str = "0.3.2"
bilge = "0.3.0"

[build-dependencies]
pyo3-build-config = "0.28.3"

[lib]
name = "xc3_model_py"
crate-type = ["cdylib"]
