[package]
name = "xc3_model_py"
version = "0.12.0"
authors = ["ScanMountGoat"]
edition = "2021"
readme = "../README.md"

[dependencies]
xc3_model = { git = "https://github.com/ScanMountGoat/xc3_lib", rev = "0fecccd" }
xc3_lib = { git = "https://github.com/ScanMountGoat/xc3_lib", rev = "0fecccd" }
xc3_model_py_derive = { path = "../xc3_model_py_derive" }
image_dds = "0.6.1"
pyo3 = { version = "0.23.3", features = ["extension-module", "indexmap", "py-clone"] }
numpy = "0.23.0"
indexmap = "2.0.0"
glam = "0.29.0"
rayon = "1.7.0"
pyo3-log = "0.12.1"
anyhow = "1.0"
smol_str = "0.2.2"

[build-dependencies]
pyo3-build-config = "0.23.3"

[lib]
name = "xc3_model_py"
crate-type = ["cdylib"]
